gen/bigquery/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-bigquery2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/bigquery/v2/lib)
error[E0412]: cannot find type `JsonValue` in module `crate::schemas`
    --> gen/bigquery/v2/lib/src/lib.rs:3708:79
     |
3708 |         pub json: Option<::std::collections::BTreeMap<String, crate::schemas::JsonValue>>,
     |                                                                               ^^^^^^^^^ not found in `crate::schemas`

error[E0072]: recursive type `schemas::QueryParameterType` has infinite size
    --> gen/bigquery/v2/lib/src/lib.rs:2840:5
     |
2840 |     pub struct QueryParameterType {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
2843 |         pub array_type: Option<crate::schemas::QueryParameterType>,
     |         ---------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::QueryParameterType` representable

error[E0072]: recursive type `schemas::StandardSqlDataType` has infinite size
    --> gen/bigquery/v2/lib/src/lib.rs:3467:5
     |
3467 |     pub struct StandardSqlDataType {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
3470 |         pub array_element_type: Option<crate::schemas::StandardSqlDataType>,
     |         ------------------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::StandardSqlDataType` representable

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0072, E0412.
For more information about an error, try `rustc --explain E0072`.
error: Could not compile `google-bigquery2`.

To learn more, run the command again with --verbose.
